--- a/WaterCompany/Views/Clients/Index.cshtml
+++ b/WaterCompany/Views/Clients/Index.cshtml
@@ -17,7 +17,7 @@
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.ClientName)
+                    @Html.DisplayNameFor(model => model.Name)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Telephone)
@@ -48,7 +48,7 @@
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.ClientName)
+                        @Html.DisplayFor(modelItem => item.Name)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Telephone)
@@ -85,7 +85,7 @@
         <tfoot>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.ClientName)
+                    @Html.DisplayNameFor(model => model.Name)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Telephone)
