--- a/WaterCompany/Views/Clients/_CreateEdit_Clients.cshtml
+++ b/WaterCompany/Views/Clients/_CreateEdit_Clients.cshtml
@@ -1,9 +1,14 @@
 ﻿@model WaterCompany.Models.ClientViewModel
 
 <div class="form-group">
-    <label asp-for="ClientName" class="control-label"></label>
-    <input asp-for="ClientName" class="form-control" />
-    <span asp-validation-for="ClientName" class="text-danger"></span>
+    <label asp-for="FirstName" class="control-label"></label>
+    <input asp-for="FirstName" class="form-control" />
+    <span asp-validation-for="FirstName" class="text-danger"></span>
+</div>
+<div class="form-group">
+    <label asp-for="LastName" class="control-label"></label>
+    <input asp-for="LastName" class="form-control" />
+    <span asp-validation-for="LastName" class="text-danger"></span>
 </div>
 <div class="form-group">
     <label asp-for="Telephone" class="control-label"></label>
