--- a/WaterCompany/Views/Shared/_Layout.cshtml
+++ b/WaterCompany/Views/Shared/_Layout.cshtml
@@ -26,18 +26,21 @@
                         <li class="nav-item ">
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Clients" asp-action="Index">Clients</a>
-                        </li>
-                        <li class="nav-item dropdown nav-user">
-                            <a style="color: #343a40;" class="dropdown-toggle nav-link nav-user-img" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Back Office</a>
-                            <div class="dropdown-menu dropdown-menu-right nav-user-dropdown" aria-labelledby="navbarDropdownMenuLink2">
-                                <a class="dropdown-item" asp-controller="Account" asp-action="Register"><i class="fas fa-user-plus"></i> Register</a>
-                                <a class="dropdown-item" href="#"><i class="fas fa-user"></i> Users</a>
-                                <a class="dropdown-item" href="#"><i class="fas fa-book"></i> Roles</a>
-                                <a class="dropdown-item" href="#"><i class="fas fa-address-book"></i> User Roles</a>
-                            </div>
-                        </li>
+                        @if (this.User.Identity.IsAuthenticated && this.User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Clients" asp-action="Index">Clients</a>
+                            </li>
+                            <li class="nav-item dropdown nav-user">
+                                <a style="color: #343a40;" class="dropdown-toggle nav-link nav-user-img" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Back Office</a>
+                                <div class="dropdown-menu dropdown-menu-right nav-user-dropdown" aria-labelledby="navbarDropdownMenuLink2">
+                                    <a class="dropdown-item" asp-controller="Account" asp-action="Register"><i class="fas fa-user-plus"></i> Register</a>
+                                    <a class="dropdown-item" href="#"><i class="fas fa-user"></i> Users</a>
+                                    <a class="dropdown-item" href="#"><i class="fas fa-book"></i> Roles</a>
+                                    <a class="dropdown-item" href="#"><i class="fas fa-address-book"></i> User Roles</a>
+                                </div>
+                            </li>
+                        }
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="#" asp-action="Index">Offers</a>
                         </li>
@@ -69,8 +72,8 @@
                                 <a class="nav-link nav-user-img" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-tasks"></i></a>
                                 <div class="dropdown-menu dropdown-menu-right nav-user-dropdown" aria-labelledby="navbarDropdownMenuLink2">
                                     <div class="nav-user-info" style="background-color:#007bff;">
-                                <a class="mb-0 text-white nav-user-name" asp-controller="Account" asp-action="ChangeUser" style="background-color:#007bff; font-size: 11px;">&ensp;@this.User.Identity.Name</a>
-                                </div>
+                                        <a class="mb-0 text-white nav-user-name" asp-controller="Account" asp-action="ChangeUser" style="background-color:#007bff; font-size: 11px;">&ensp;@this.User.Identity.Name</a>
+                                    </div>
                                     <a class="dropdown-item" href="#"><i class="fas fa-user mr-2"></i>Account</a>
                                     <a class="dropdown-item" href="#"><i class="fas fa-cog mr-2"></i>Settings</a>
                                     <a class="dropdown-item" asp-controller="Account" asp-action="Logout"><i class="fas fa-power-off mr-2"></i> Logout</a>
