--- a/WaterCompany/Views/Shared/_Layout.cshtml
+++ b/WaterCompany/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav ml-auto navbar-right-top flex-grow-1">
                         <li class="nav-item ">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index"><i class="fas fa-home"></i></a>
                         </li>
                         @if (this.User.Identity.IsAuthenticated && this.User.IsInRole("Admin"))
                         {
@@ -32,12 +32,13 @@
                                 <a class="nav-link text-dark" asp-controller="Clients" asp-action="Index">Clients</a>
                             </li>
                             <li class="nav-item dropdown nav-user">
-                                <a style="color: #343a40;" class="dropdown-toggle nav-link nav-user-img" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Back Office</a>
+                                <a style="color: #343a40;" class="dropdown-toggle nav-link nav-user-img" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Back Office</a>
                                 <div class="dropdown-menu dropdown-menu-right nav-user-dropdown" aria-labelledby="navbarDropdownMenuLink2">
                                     <a class="dropdown-item" asp-controller="Account" asp-action="Register"><i class="fas fa-user-plus"></i> Register</a>
                                     <a class="dropdown-item" href="#"><i class="fas fa-user"></i> Users</a>
                                     <a class="dropdown-item" href="#"><i class="fas fa-book"></i> Roles</a>
                                     <a class="dropdown-item" href="#"><i class="fas fa-address-book"></i> User Roles</a>
+                                    <a class="dropdown-item" asp-controller="Countries" asp-action="Index"><i class="fas fa-globe-europe"></i> Countries and Cities</a>
                                 </div>
                             </li>
                         }
@@ -48,6 +49,35 @@
                 </div>
                 <div class="collapse navbar-collapse " id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto navbar-right-top">
+                        @if (this.User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item nav-user">
+                                <div>
+                                    <a class="nav-link text-dark" asp-controller="Account" asp-action="ChangeUser">&ensp;@this.User.Identity.Name</a>
+                                </div>
+                            </li>
+                            <li class="nav-item dropdown nav-user">
+                                <a class="nav-link nav-user-img" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-tasks"></i></a>
+                                <div class="dropdown-menu dropdown-menu-right nav-user-dropdown" aria-labelledby="navbarDropdownMenuLink2">
+                                    <div class="nav-user-info" style="background-color:#007bff;">
+                                        <a class="mb-0 text-white nav-user-name" asp-controller="Account" asp-action="ChangeUser" style="background-color:#007bff; font-size: 11px;">&ensp;@this.User.Identity.Name</a>
+                                    </div>
+                                    <a class="dropdown-item" href="#"><i class="fas fa-user mr-2"></i>Account</a>
+                                    <a class="dropdown-item" href="#"><i class="fas fa-cog mr-2"></i>Settings</a>
+                                    <a class="dropdown-item" asp-controller="Account" asp-action="Logout"><i class="fas fa-power-off mr-2"></i> Logout</a>
+                                </div>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item dropdown nav-user">
+                                <a class="nav-link nav-user-img" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-tasks"></i></a>
+                                <div class="dropdown-menu dropdown-menu-right nav-user-dropdown" aria-labelledby="navbarDropdownMenuLink2">
+                                    <a class="dropdown-item" asp-controller="Account" asp-action="Login"><i class="fas fa-sign-in-alt mr-2"></i>Login</a>
+                                    <a class="dropdown-item" href="#"><i class="fas fa-cog mr-2"></i>Settings</a>
+                                </div>
+                            </li>
+                        }
                         <li class="nav-item dropdown connection">
                             <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-fw fa-th"></i> </a>
                             <ul class="dropdown-menu dropdown-menu-right connection-dropdown">
@@ -66,31 +96,6 @@
                                 </li>
                             </ul>
                         </li>
-                        @if (this.User.Identity.IsAuthenticated)
-                        {
-                            <li class="nav-item dropdown nav-user">
-                                <a class="nav-link nav-user-img" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-tasks"></i></a>
-                                <div class="dropdown-menu dropdown-menu-right nav-user-dropdown" aria-labelledby="navbarDropdownMenuLink2">
-                                    <div class="nav-user-info" style="background-color:#007bff;">
-                                        <a class="mb-0 text-white nav-user-name" asp-controller="Account" asp-action="ChangeUser" style="background-color:#007bff; font-size: 11px;">&ensp;@this.User.Identity.Name</a>
-                                    </div>
-                                    <a class="dropdown-item" href="#"><i class="fas fa-user mr-2"></i>Account</a>
-                                    <a class="dropdown-item" href="#"><i class="fas fa-cog mr-2"></i>Settings</a>
-                                    <a class="dropdown-item" asp-controller="Account" asp-action="Logout"><i class="fas fa-power-off mr-2"></i> Logout</a>
-                                </div>
-                            </li>
-                        }
-                        else
-                        {
-                            <li class="nav-item dropdown nav-user">
-                                <a class="nav-link nav-user-img" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-tasks"></i></a>
-                                <div class="dropdown-menu dropdown-menu-right nav-user-dropdown" aria-labelledby="navbarDropdownMenuLink2">
-                                    <a class="dropdown-item" href="#"><i class="fas fa-user mr-2"></i>Account</a>
-                                    <a class="dropdown-item" href="#"><i class="fas fa-cog mr-2"></i>Settings</a>
-                                    <a class="dropdown-item" asp-controller="Account" asp-action="Login"><i class="fas fa-sign-in-alt mr-2"></i>Login</a>
-                                </div>
-                            </li>
-                        }
                         <li class="navbar">
                             <h3 class="navbar-brand mr-auto"></h3>
                             <nav class="navbar-nav">
