--- a/WaterCompany/Views/Account/Register.cshtml
+++ b/WaterCompany/Views/Account/Register.cshtml
@@ -11,9 +11,9 @@
                 <div class="card-body p-md-5">
                     <div class="row justify-content-center">
                         <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-                            <p style="padding-left: 25px;" class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
                             <form method="post" class="text-center mx-1 mx-md-4">
                                 <div asp-validation-summary="ModelOnly"></div>
+                            <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
                                 <div class="text-center form-outline flex-fill mb-0" style="padding-right: 25px;">
                                     <label class="form-label" asp-for="FirstName">First Name</label>
                                     <input asp-for="FirstName" class="form-control" />
@@ -33,6 +33,26 @@
                                     <label class="form-label" asp-for="Email">Email</label>
                                     <input asp-for="Email" class="form-control" />
                                     <span asp-validation-for="Email" class="text-danger"></span>
+                                </div>
+                                 <div class="form-outline flex-fill mb-0" style="padding-right: 25px;">
+                                    <label class="form-label" asp-for="CountryId" class="control-label"></label>
+                                    <select asp-for="CountryId" asp-items="Model.Countries" class="form-control text-center"></select>
+                                    <span asp-validation-for="CountryId" class="text-danger"></span>
+                                </div>
+                                <div class="form-outline flex-fill mb-0" style="padding-right: 25px;">
+                                    <label class="form-label" asp-for="CityId" class="control-label"></label>
+                                    <select asp-for="CityId" asp-items="Model.Cities" class="form-control text-center"></select>
+                                    <span asp-validation-for="CityId" class="text-danger"></span>
+                                </div>
+                                <div class="form-outline flex-fill mb-0" style="padding-right: 25px;">
+                                    <label class="form-label" asp-for="Address">Address</label>
+                                    <input asp-for="Address" class="form-control" />
+                                    <span asp-validation-for="Address" class="text-danger"></span>
+                                </div>
+                                <div class="form-outline flex-fill mb-0" style="padding-right: 25px;">
+                                    <label class="form-label" asp-for="PhoneNumber">Phone Number</label>
+                                    <input asp-for="PhoneNumber" class="form-control" />
+                                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                                 </div>
                                 <div class="form-outline flex-fill mb-0" style="padding-right: 25px;">
                                     <label class="form-label" asp-for="Password">Password</label>
@@ -62,10 +82,46 @@
         </div>
     </div>
 </div>
+<div class="text-success">
+    <p>
+        @ViewBag.Message
+    </p>
+</div>
 <br />
 <br />
-@section Scripts{
+<br />
+<br />
+<br />
+@section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-    }
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("#CountryId").change(function () {
+                $("#CityId").empty();
+                $.ajax({
+                    url: '@Url.Action("GetCitiesAsync","Account")',
+                    type: 'POST',
+                    dataType: 'json',
+                    data: { countryId: $("#CountryId").val() },
+                    success: function (cities) {
+                        debugger;
+                        $("#CityId").append('<option value="0">(Select a city!)</option>');
+                        $.each(cities, function (i, city) {
+                            $("#CityId").append('<option value="'
+                                + city.id + '">'
+                                + city.name + '</option>');
+                        });
+                    },
+                    error: function (ex) {
+                        debugger;
+                        alert('Failed to retrieve cities.' + ex);
+                    }
+                });
+                return false;
+            })
+        });
+    </script>
+}
