--- a/WaterCompany/Views/Employees/_DetailsDelete_Employees.cshtml
+++ b/WaterCompany/Views/Employees/_DetailsDelete_Employees.cshtml
@@ -1,4 +1,4 @@
-﻿@model WaterCompany.Data.Entities.Client
+﻿@model WaterCompany.Data.Entities.Employee
 
 <dt class="col-3">
     @Html.DisplayNameFor(model => model.ImageFullPath)
