--- a/WaterCompany/Views/Employees/_CreateEdit_Employees.cshtml
+++ b/WaterCompany/Views/Employees/_CreateEdit_Employees.cshtml
@@ -1,4 +1,4 @@
-﻿@model WaterCompany.Models.ClientViewModel
+﻿@model WaterCompany.Models.EmployeeViewModel
 
 <div class="form-group">
     <label asp-for="FirstName" class="control-label"></label>
