--- a/WaterCompany/Views/_ViewImports.cshtml
+++ b/WaterCompany/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using WaterCompany.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Vereyon.Web.FlashMessage
+@addTagHelper *, Syncfusion.EJ2
